publications and other fix

--- a/cente-collective-use-scientific-instruments.html
+++ b/cente-collective-use-scientific-instruments.html
@@ -47,7 +47,7 @@
 					<ul class="navigation" id="navigation" hidden>
 						<li class="navigation-item"><a href="home.html" class="navigation-link">ГОЛОВНА</a></li>
 						<li class="navigation-item"><a href="events-news.html" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
-						<li class="navigation-item submenu-link">
+						<li class="navigation-item submenu-link uk-active">
 							<a href="#structure-submenu" class="navigation-link uk-button" type="button">СТРУКТУРА</a>
 							<ul class="submenu uk-drop" id="structure-submenu" uk-drop="mode: click">
 								<li class="navigation-item"><a href="leadership.html" class="navigation-link">Керівництво</a></li>
@@ -103,7 +103,7 @@
           <ol>
             <li><p>Аналітичний комплекс:</p>
               <ul>
-                <li>нізьковакуумний скануючий мікроскоп JSM-6390LV (JEOL Ltd., Японія),</li>
+                <li>низьковакуумний скануючий мікроскоп JSM-6390LV (JEOL Ltd., Японія),</li>
                 <li>енергодисперсійний спектрометр X-Max 50 (OXFORD Instruments Analytical,
                   Великобританія);</li>
                 <li>детектор дифракції електронів HKL Channel 5 EBSD (OXFORD Instruments Analytical,
