--- a/contacts.html
+++ b/contacts.html
@@ -82,7 +82,7 @@
             </li>
 						<li class="navigation-item"><a href="graduate-school.html" class="navigation-link">АСПІРАНТУРА</a></li>
 						<li class="navigation-item"><a href="publications.html" class="navigation-link">ПУБЛІКАЦІЇ</a></li>
-						<li class="navigation-item"><a href="contacts.html" class="navigation-link">КОНТАКТИ</a></li>
+						<li class="navigation-item uk-active"><a href="contacts.html" class="navigation-link">КОНТАКТИ</a></li>
 					</ul>
 				</nav>
 				<span class="bg-img bg-page bg-img-1"><img src="images/bg-img-1.svg" alt="img"></span>
