--- a/economic-operational-department.html
+++ b/economic-operational-department.html
@@ -47,7 +47,7 @@
 					<ul class="navigation" id="navigation" hidden>
 						<li class="navigation-item"><a href="home.html" class="navigation-link">ГОЛОВНА</a></li>
 						<li class="navigation-item"><a href="events-news.html" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
-						<li class="navigation-item submenu-link">
+						<li class="navigation-item submenu-link uk-active">
 							<a href="#structure-submenu" class="navigation-link uk-button" type="button">СТРУКТУРА</a>
 							<ul class="submenu uk-drop" id="structure-submenu" uk-drop="mode: click">
 								<li class="navigation-item"><a href="leadership.html" class="navigation-link">Керівництво</a></li>
@@ -98,7 +98,7 @@
               <div class="text-info">
                 <ul class="quantity-people-list">
                   <li>Кількість працівників: <strong>11</strong></li>
-                  <li>(завідувачка відділу - <strong>1</strong>, провідний інженер – <strong>1</strong> провідний інженер-енергетик- <strong>1</strong>, водій автотранспортного засобу – <strong>1</strong>, технічний персонал – <strong>7</strong>) </li>
+                  <li>(завідувачка відділу - <strong>1</strong>, провідний інженер – <strong>1</strong>, провідний інженер-енергетик- <strong>1</strong>, водій автотранспортного засобу – <strong>1</strong>, технічний персонал – <strong>7</strong>) </li>
                 </ul>
               </div>
             </div>
