--- a/events-news.html
+++ b/events-news.html
@@ -46,7 +46,7 @@
 					<a href="#navigation" class="dropdown" uk-toggle="target: #navigation; animation: uk-animation-fade"><span class="dropdown-icon"></span></a>
 					<ul class="navigation" id="navigation" hidden>
 						<li class="navigation-item"><a href="home.html" class="navigation-link">ГОЛОВНА</a></li>
-						<li class="navigation-item"><a href="events-news.html" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
+						<li class="navigation-item uk-active"><a href="events-news.html" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
 						<li class="navigation-item submenu-link">
 							<a href="#structure-submenu" class="navigation-link uk-button" type="button">СТРУКТУРА</a>
 							<ul class="submenu uk-drop" id="structure-submenu" uk-drop="mode: click">
@@ -96,7 +96,7 @@
 						<ul class="uk-subnav uk-subnav-pill">
 							<li class="uk-active" uk-filter-control><a href="#">Всі новини</a></li>
 							<li uk-filter-control=".card-news-nanu"><a href="#">Новини НАНУ</a></li>
-							<li uk-filter-control=".card-news-iscu"><a href="#">Новини ІМКУ</a></li>
+							<li uk-filter-control=".card-news-iscu"><a href="#">Новини ІМК</a></li>
 							<li uk-filter-control=".card-defense-dissertations"><a href="#">Захист дисертацій</a></li>
 							<li uk-filter-control=".card-competitions-grants"><a href="#">Конкурси і гранти</a></li>
 							<li uk-filter-control=".card-news-other"><a href="#">Різне</a></li>
@@ -120,9 +120,9 @@
 							</div>
 							<div class="card-news card-news-iscu">
 								<div class="card-img">
-									<img src="images/iscu.jpg" alt="ІМКУ">
+									<img src="images/iscu.jpg" alt="ІМК">
 									<div class="card-category">
-										<span>Новини ІМКУ</span>
+										<span>Новини ІМК</span>
 									</div>
 								</div>
 								<div class="card-text">
@@ -136,7 +136,7 @@
 							</div>
 							<div class="card-news card-defense-dissertations">
 								<div class="card-img">
-									<img src="images/iscu.jpg" alt="ІМКУ">
+									<img src="images/iscu.jpg" alt="ІМК">
 									<div class="card-category">
 										<span>Захист дисертацій</span>
 									</div>
@@ -168,7 +168,7 @@
 							</div>
 							<div class="card-news card-news-other">
 								<div class="card-img">
-									<img src="images/iscu.jpg" alt="ІМКУ">
+									<img src="images/iscu.jpg" alt="ІМК">
 									<div class="card-category">
 										<span>Різне</span>
 									</div>
