--- a/graduate-school.html
+++ b/graduate-school.html
@@ -80,7 +80,7 @@
 							</ul>
               
             </li>
-						<li class="navigation-item"><a href="graduate-school.html" class="navigation-link">АСПІРАНТУРА</a></li>
+						<li class="navigation-item uk-active"><a href="graduate-school.html" class="navigation-link">АСПІРАНТУРА</a></li>
 						<li class="navigation-item"><a href="publications.html" class="navigation-link">ПУБЛІКАЦІЇ</a></li>
 						<li class="navigation-item"><a href="contacts.html" class="navigation-link">КОНТАКТИ</a></li>
 					</ul>
@@ -101,7 +101,7 @@
               <li>Гарант освітньої програми - завідувач відділу, старший дослідник, професор, доктор технічних наук <a href="pablick/otd7/cv/CV_Явецький_Відділ 7.pdf" target="blank">Явецький Р.П.</a> зі стажем наукової роботи понад 20 років, є професіоналом з досвідом роботи в галузі матеріалознавства, зокрема, керамічних та наноструктурних матеріалів.</li>
               <li>Провідний науковий співробітник, професор, доктор технічних наук <a href="pablick/otd7/cv/CV_Литвинов_Відділ 7.pdf" target="blank">Литвинов Л.А.</a> зі стажем наукової (47 років) та науково-педагогічної (10 років) роботи, є професіоналом з досвідом роботи в галузі матеріалознавства, зокрема, розробки технології вирощування монокристалів сапфіру функціонального та конструкційного призначення.</li>
               <li>Старший науковий співробітник, старший дослідник, доктор технічних наук <a href="pablick/25/cv/CV_doljenkova.pdf" target="blank">Долженкова О.Ф.</a> зі стажем наукової роботи 34 роки, є професіоналом з досвідом роботи в галузі матеріалознавства, зокрема, дослідження структури та фізичних властивостей матеріалів.</li>
-              <li>Старший науковий співробітник, кандидат технічних наук <a href="pablick/23/cv/CV_Вовк Олег_Відділ 23.pdf" target="blank">Вовк О.О.</a> зі стажем наукової роботи 14 років є професіоналом з досвідом роботи в галузі матеріалознавства, зокрема, розробки технологій виготовлення монокристалічних та керамічних матеріалів та їх обробки.</li>
+              <li>Старший науковий співробітник, кандидат технічних наук <a href="pablick/23/cv/CV_Вовк Олена_Відділ 23.pdf" target="blank">Вовк О.О.</a> зі стажем наукової роботи 14 років є професіоналом з досвідом роботи в галузі матеріалознавства, зокрема, розробки технологій виготовлення монокристалічних та керамічних матеріалів та їх обробки.</li>
               <li>Старший науковий співробітник, доктор технічних наук <a href="pablick/25/cv/CV_bezkrovna.pdf" target="blank">Безкровна О.М.</a> зі стажем наукової роботи 12 років є фахівцем в галузі матеріалознавства, зокрема, розробки технологій виготовлення наноструктурних матеріалів.</li>
               <li>Науковий співробітник, кандидат технічних наук <a href="pablick/otd7/cv/CV_Сафронова_Відділ 7.pdf" target="blank">Сафронова (Дуліна) Н.А.</a> зі стажем наукової роботи 12 років є фахівцем в галузі матеріалознавства, зокрема, розробки технологій виготовлення нанопорошків та наноструктурних матеріалів.</li>
             </ol>
@@ -175,10 +175,10 @@
               <li>
                 <p>Індивідуальні плани аспірантів:</p>
                 <ul>
-                  <li>Балабанов А.Е. <a href="pablick/otd7/cv/CV_Балабанов_Відділ 7.pdf" target="_blank">(посилання на pdf)</a></li>
-                  <li>Задорожній В.С. <a href="pablick/25/cv/CV_zadorojnyi.pdf" target="_blank">(посилання на pdf)</a></li>
-                  <li>Тимошенко А.Д. <a href="pablick/otd7/cv/CV_Тимошенко_Відділ 7.pdf" target="_blank">(посилання на pdf)</a></li>
-                  <li>Сірик Ю.В. <a href="pablick/23/cv/CV_Сірик_Відділ 23.pdf" target="_blank">(посилання на pdf)</a></li>
+                  <li>Балабанов А.Е. <a href="#" target="_blank">(посилання на pdf)</a></li>
+                  <li>Задорожній В.С. <a href="#" target="_blank">(посилання на pdf)</a></li>
+                  <li>Тимошенко А.Д. <a href="#" target="_blank">(посилання на pdf)</a></li>
+                  <li>Сірик Ю.В. <a href="#" target="_blank">(посилання на pdf)</a></li>
                 </ul>
               </li>
             </ul>
