--- a/leadership.html
+++ b/leadership.html
@@ -47,8 +47,8 @@
 					<ul class="navigation" id="navigation" hidden>
 						<li class="navigation-item"><a href="home.html" class="navigation-link">ГОЛОВНА</a></li>
 						<li class="navigation-item"><a href="events-news.html" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
-						<li class="navigation-item submenu-link">
-							<a href="#structure-submenu" class="navigation-link uk-button" type="button">СТРУКТУРА</a>
+						<li class="navigation-item submenu-link uk-active">
+							<a href="#structure-submenu " class="navigation-link uk-button" type="button">СТРУКТУРА</a>
 							<ul class="submenu uk-drop" id="structure-submenu" uk-drop="mode: click">
 								<li class="navigation-item"><a href="leadership.html" class="navigation-link">Керівництво</a></li>
 								<li class="navigation-item ">
@@ -98,7 +98,7 @@
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Директор</div>
-                  <div class="people-name">Притула Ігор Михайлович</div>
+                  <a href="pablick/25/cv/CV_pritula.pdf" class="people-name" target="blanck">Притула Ігор Михайлович</a>
                   <p>Член-кореспондент НАН України, доктор фізико-математичних наук, професор.</p>
                 </div>
                 <div class="people-contact">
@@ -122,7 +122,7 @@
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Заcтупник директора з загальних питань</div>
-                  <div class="people-name">Верещак Олександр Іванович</div>
+                  <a href="pablick/руководство/cv/CV_Верещак.pdf" class="people-name" target="blanck">Верещак Олександр Іванович</a>
                 </div>
                 <div class="people-contact">
                   <a href="#peole-contact-holder-2" class="people-contact-link" uk-toggle="target: #peole-contact-holder-2; animation: uk-animation-fade">Контакти</a>
@@ -143,7 +143,7 @@
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Заступник директора з наукової роботи</div>
-                  <div class="people-name">Толмачов Олександр Володимирович</div>
+                  <a href="pablick/otd7/cv/CV_Толмачов.pdf" class="people-name" target="blanck">Толмачов Олександр Володимирович</a>
                   <p>Член-кореспондент НАН України, доктор фізико-математичних наук, професор.</p>
                 </div>
                 <div class="people-contact">
@@ -164,8 +164,8 @@
               <div class="card-img"><img src="images/Лемишенко.jpg" alt="Лемишенко И.Г"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <div class="people-status">Заступниця директора з зовнішньоекономічної діяльностір</div>
-                  <div class="people-name">Лемішенко Ірина Генадіївна</div>
+                  <div class="people-status">Заступниця директора з зовнішньоекономічної діяльності</div>
+                  <a href="pablick/руководство/cv/СV_Лемішенко.doc" class="people-name" target="blanck">Лемішенко Ірина Генадіївна</a>
                 </div>
                 <div class="people-contact">
                   <a href="#peole-contact-holder-4" class="people-contact-link" uk-toggle="target: #peole-contact-holder-4; animation: uk-animation-fade">Контакти</a>
@@ -186,7 +186,7 @@
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Учений секретар</div>
-                  <div class="people-name">Кулик Костянтин Миколайович</div>
+                  <a href="pablick/otd1/cv/CV_Kulyk_DOI.pdf" class="people-name" target="blanck">Кулик Костянтин Миколайович</a>
                   <p>Кандидат фізико-математичних наук</p>
                 </div>
                 <div class="people-contact">
