--- a/scientific-achievements.html
+++ b/scientific-achievements.html
@@ -72,7 +72,7 @@
 								</li>
 							</ul>
 						</li>
-            <li class="navigation-item">
+            <li class="navigation-item uk-active">
               <a href="#activity-departments-submenu" class="navigation-link uk-button" type="button">ДІЯЛЬНІСТЬ</a>
 							<ul class="submenu uk-drop" id="activity-departments-submenu" uk-drop="mode: click">
 								<li class="navigation-item"><a href="scientific-achievements.html" class="navigation-link">Наукові досягнення</a></li>
@@ -96,7 +96,7 @@
             <li class="uk-open">
               <h4 class="uk-accordion-title">НАПРЯМ - НЕЛІНІЙНО-ОПТИЧНІ КРИСТАЛИ</h4>
               <div class="uk-accordion-content">
-                <ul class="research-list">
+                <ol class="research-list">
                   <li>Виявлено структурно обумовлені механізми формування та особливості трансформації підсистеми дефектів у діелектричних кристалах групи KDP;  встановлено процеси взаємодії інкорпорованих наночастинок та органічних молекул з власними дефектами діелектрика при формуванні фотоіндукованого відгуку гетерогенної (композитної) системи. <a href="https://doi.org/10.1016/j.matchemphys.2011.04.080" target="blank">https://doi.org/10.1016/j.matchemphys.2011.04.080</a></li>
                   <li>Запропоновано механізм формування впорядкованої квазіперіодичної  зонарної мікроструктури в композиті KDP:TiO2. Виявлено ефект зміни знаку  нелінійної рефракції в системі KDP:TiO2 та запропоновано новий тип  середовищ із керованою нелінійною рефракцією, включаючи її компенсацію. <a href="https://doi.org/10.1016/j.optmat.2010.11.022" target="blank">https://doi.org/10.1016/j.optmat.2010.11.022</a> </li>
                   <li>Вперше розроблено новий клас радіаційно-чутливих (сцинтиляційних)  матеріалів для реєстрації швидких нейтронів на основі монокристалів групи  KDP MH<sub>2</sub>(PO<sub>4</sub>) (M = Li, K, NH<sub>4</sub>) активовані неорганічними і органічними іонами: сцинтиляційні монокристали дигидрофосфата калію, активовані  талієм Tl<sup>+</sup> (Патент України №96893 від 12.12.2011 р.); сцинтиляційні  монокристали дигидрофосфату амонію, активовані талієм Tl<sup>+</sup> (Патент України №96894 від 12.12.2011 р.); сцинтиляційні монокристали дигідрофосфату калію, активовані церієм Се<sup>3+</sup> (Патент України №96896 від 12.12.2011 р). Chapter 5, In book: Advances in Materials Science Research. 2020, Volume 43, P. 143-174, ISBN: 978-1-53618-730-4. </li>
@@ -107,30 +107,30 @@
                   <li>N.O. Kovalenko, S.V. Naydenov, I.M. Pritula, S.N.  Galkin, II-Sulfides and II-Selenides: Growth, Properties  and Modern Applications , In book Single Crystals of Electronic Materials: Growth and Properties (Editor Roberto Fornari), Elsevier Limited, United Kingdom, 2019, Chapter No. 10, Pages 303-330, <a href="https://doi.org/10.1016/B978-0-08-102096-8.00009-4" target="blank">https://doi.org/10.1016/B978-0-08-102096-8.00009-4</a> </li>
                   <li>I.Pritula, K. Sangwal, Fundamentals of Crystal Growth from Solutions, Chapter 29 in: Handbook of Crystal Growth - Bulk Crystal Growth, Vol. II. 2nd Edition (Editors: T. Nishinaga, P. Rudolph), Elsevier B.V., Holland, 2015, Pages 1185-1227, <a href="https://doi.org/10.1016/B978-0-444-63303-3.00029-8" target="blank">https://doi.org/10.1016/B978-0-444-63303-3.00029-8</a> </li>
                   <li>I.M. Pritula, O. N. Bezkrovnaya, V.M. Puzikov, V.V. Maslov, A. G. Plaksiy, A.V. Lopin, Yu. A. Gurkalenko,  Spectral and Lasing Characteristics of Some Red and  NIR Laser Dyes in Silica Matrices, Chap. 13 in ‘Advanced Lasers: Laser Physics and Technology for Applied and  Fundamental Science’, O. Shulika, I. Sukhoivanov, eds., Springer Series in Optical Science, Vol. 193, pp. 199 – 212, 2015, ISBN: 978-94-017-9481-7, <a href="https://doi.org/10.1007/978-94-017-9481-7" target="blank">https://doi.org/10.1007/978-94-017-9481-7</a>.</li>
-                </ul>
+                </ol>
               </div>
             </li>
             <li>
               <h4 class="uk-accordion-title">НАПРЯМ - оптичні та лазерні кристали</h4>
               <div class="uk-accordion-content">
-                <ul class="research-list">
+                <ol class="research-list">
                   <li>Розроблено фізико-хімічні принципи та технологію вирощування методом  ГСК з градієнтним допуванням шихти великогабаритних (110х200х30 мм3) монокристалів Ti:сапфіру з високою однорідністю розподілу активатору для застосування у фемтосекундних та перестроюваних за частотою лазерах. Лазери та лазерні системи на Ti:сапфірі мають унікальні характеристики та  широко використовуються в фундаментальних і прикладних дослідженнях в  фізиці, біохімії та новітніх технологіях. Розробку впроваджено на дослідно-промисловій ділянці Інституту  монокристалів НАН України. Кристали і оптичні елементи з Ti:сапфіру  виготовляються для науково-дослідних центрів, університетів та компаній в  країнах ЄС, США, Китаю, Великої Британії, Японії, Ізраїлю, Північної Кореї та  Білорусі.  Патент України на винахід №122889 (від 13.01.2021р., бюл.№2).  <a href="https://dx.doi.org/10.1134/S0020168512110088" target="blank">https://dx.doi.org/10.1134/ S0020168512110088</a> DOI: 10.1134/S1063783415040216</li>
                   <li>Розроблено технологію вирощування методом ГСК в захисних відновних середовищах великогабаритних монокристалічних пластин лейкосапфіру і технологію виготовлення широкоапертурних оптичних вікон (до 350x500x30мм3) для оптико-електронних систем та аерокосмічної техніки.  Розробку впроваджено на дослідно-промисловій ділянці Інституту монокристалів НАН України. Кристали і оптичні елементи постачаються для підприємств України та на зовнішній ринок. Патент України на винахід №114121 (від 25.04.2017р., бюл.№8). <a href="http://dx.doi.org/10.15407/fm20.01.111" target="blank">http://dx.doi.org/10.15407/fm20.01.111</a></li>
                   <li>Розроблено фізико-технологічні основи вирощування сцинтиляційних  кристалів рідкісноземельних гранатів ReAG:Ce, Pr (Re=Y, Lu, Gd, Sc) методом ГСК в молібденових тиглях і захисному відновному газовому  середовищі. Отримані кристали за своїми функціональними властивостями  аналогічні кристалам, вирощених з коштовних іридієвих тиглів.  Сцинтиляційні екрани на основі кристалів гранатів, активованих церієм,  впроваджено в компанії ВКФ «SUMY ELECTON OPTICS» (м. Суми, Україна)  для виробництва систем виводу та аналізу зображень SEO ImageLab для  електронних мікроскопів. <a href="https://doi.org/10.1016/j.optmat.2012.04.018" target="blank">https://doi.org/10.1016/j.optmat.2012.04.018</a>  DOI: 10.1134/ S1063785009100265</li>
                   <li>Розроблено спосіб термохимічної обробки сировини для отримання  широкоапертурних лазерних кристалів Ti:сапфіру з низьким вмістом іонів  Ti<sup>4+</sup>, активаторних центрів паразитного поглинання Ti<sup>3+</sup>-Ti<sup>4+</sup> та високим FOM. Патент України на корисну модель №141111, чинний з 25.03.2020р. <a href="https://doi.org/10.15407/fm25.02.208" target="blank">https://doi.org/10.15407/fm25.02.208</a> </li>
                   <li>Розроблено конструкцію та виготовлено сапфірові імплантати для протезування міжхребцевого диска шийного відділу хребта, що відповідають  всім сучасним вимогам по ендопротезуванню. Проведена порівняльна  характеристика напружено-деформованого стану елементів шийного відділу хребта у випадку її деформації та після хірургічного лікування з використанням сапфірового імплантату для протезування міжхребцевого диска. Патенти України на корисну модель №105312 від 10.03.2016 р., №134060  від 25.04.2019 р., №136326 від 12.08.2019р.</li>
                   <li>Розроблено конструкцію прозорих композиційних пакетів з використанням сапфірових елементів для вікон бронетехніки. Патент України на корисну модель №127567 від 10.08.2018 р.</li>
-                  <li>Розроблено фізико-хімічні умови вирощування кристалів CaБ<sub>3</sub>RE<sub>2</sub>(BO<sub>3</sub>)<sub>4</sub> (RE=Y, Gd) методом Чохральського, які забезпечують кристалізацію до 70% розплаву та відсутність домішкових фаз і центрів забарвлення в кристалах. Для кристалів CaБ<sub>3</sub>RE<sub>2</sub>(BO<sub>3</sub>)<sub>4</sub>:Yb,Er (RE=Y, Gd) вперше отримана лазерна  генерація на довжині хвилі 1,53 мкм з ККД лазера 12-13% та вихідною  потужністю до 0,5 Вт в режимі безперервної генерації. Патент України на винахід №113816, Бюл. №5, опубл. 10.03.17 р. <a href="https://doi.org/10211222220-9506-2019-10-1-14-22" target="blank">https://doi.org/10.211222220-9506-2019-10-1-14-22</a>
+                  <li>Розроблено фізико-хімічні умови вирощування кристалів Ca<sub>3</sub>RE<sub>2</sub>(BO<sub>3</sub>)<sub>4</sub> (RE=Y, Gd) методом Чохральського, які забезпечують кристалізацію до 70% розплаву та відсутність домішкових фаз і центрів забарвлення в кристалах. Для кристалів CaБ<sub>3</sub>RE<sub>2</sub>(BO<sub>3</sub>)<sub>4</sub>:Yb,Er (RE=Y, Gd) вперше отримана лазерна  генерація на довжині хвилі 1,53 мкм з ККД лазера 12-13% та вихідною  потужністю до 0,5 Вт в режимі безперервної генерації. Патент України на винахід №113816, Бюл. №5, опубл. 10.03.17 р. <a href="https://doi.org/10211222220-9506-2019-10-1-14-22" target="blank">https://doi.org/10.211222220-9506-2019-10-1-14-22</a>
                     </li>
                   <li>Методом Чохральского вирощені нові нецентросиметричні монокристали  Сa<sub>9</sub>Nd(VO<sub>4</sub>)<sub>7</sub>, Сa<sub>10</sub>M(VO<sub>4</sub>)<sub>7</sub>(М – Li, Na, K) та Ca<sub>10</sub>,5<sub>-x</sub>Pb<sub>x</sub>(VO<sub>4</sub>)<sub>7</sub> (х=1,8; 3,5; 4,9). На кристалах Сa<sub>9</sub>La(VO<sub>4</sub>)<sub>7</sub>:Nd та Сa<sub>10</sub>Li(VO<sub>4</sub>)<sub>7</sub>:Nd при ламповому накачуванні  отримано лазерну генерацію на довжині хвилі 1,06 мкм з диференціальним ККД 0,99%, що знаходиться на одному рівні з комерційними кристалами  ітрій-алюмінієвого гранату YAG:Nd при аналогічних умовах тестування. Патент України на винахід №105337, Бюл. №8, опубл. 25.04.14 р. <a href="https://doi.org/10.1039/C8CE01843J" target="blank">https://doi.org/10.1039/C8CE01843J</a></li>
                   <li>Встановлено закономірності формування оптичних та люмінесцентних  характеристик монокристалів YAG:Ce з високою однорідністю розподілу  активатору, отриманих методом ГСК в відновному газовому середовищі.  Показано, що спектральні властивості і просторовий розподіл випромінювання світлодіода з монокристалічним люмінесцентним  конвертером YAG:Се істотно залежать від морфології поверхні конвертера. Варіювання шорсткості поверхні дозволяє отримати джерело світла з  широким спектром колірних характеристик. Показано можливість створення  світлодіода білого світла з корелятивною колірною температурою ТCC~5000-6500 K і індексом передачі кольору CRI≈60-70. Розроблено люмінесцентний конвертер для потужних LED/LD джерел білого світла.  Патент України на корисну модель №113542 (опубліковано 10.02.2017р.,  бюл. №3/2017) DOI:<a href="https://doi.org/10.1134/S0030400X16050210" target="blank">https://doi.org/10.1134/S0030400X16050210</a></li>
-                </ul>
+                </ol>
               </div>
             </li>
             <li>
               <h4 class="uk-accordion-title">НАПРЯМ - ТЕОРІЯ КОНДЕНСОВАНОГО СТАНУ РЕЧОВИНИ</h4>
               <div class="uk-accordion-content">
-                <ul class="research-list">
+                <ol class="research-list">
                   <li>Досліджено релаксацію наночастинки з внутрішньої порою методом
                     молекулярної динаміки. Виявлено ефект існування &quot;магічних&quot; пор у
                     наночастинках, які виявляють аномальну стійкість. Такі пори утворені
@@ -201,13 +201,13 @@
                         такого наближення. DOI: <a href="https://doi.org/10.1134/S1063784210050038" target="blank">https://doi.org/10.1134/S1063784210050038</a></li>
                     </ul>
                   </li>
-                </ul>
+                </ol>
               </div>
             </li>
             <li>
               <h4 class="uk-accordion-title">НАПРЯМ - КРИСТАЛІЧНі МАТЕРІАЛи СКЛАДНИХ СПОЛУК</h4>
               <div class="uk-accordion-content">
-                <ul class="research-list">
+                <ol class="research-list">
                   <li>Встановлено, що структурно-фазовий стан нанокераміки (Y<sub>0,99</sub>Eu<sub>0,01</sub>)<sub>2</sub>O<sub>3</sub>,
                     отриманої консолідацією нанодисперсних порошків при високому тиску
                     Р=8ГПа, визначається наслідками структурного фазового переходу
@@ -271,7 +271,7 @@
                     конкурсом «Підтримка досліджень провідних та молодих учених», проєкт
                     «Новітні та традиційні ІЧ-прозорі кераміки складної архітектури для
                     екстремальних умов експлуатації» (2020-2022рр., №2020.02/0293).</li>
-                </ul>
+                </ol>
               </div>
             </li>
           </ul>
