--- a/scientific-technical-developments.html
+++ b/scientific-technical-developments.html
@@ -72,7 +72,7 @@
 								</li>
 							</ul>
 						</li>
-            <li class="navigation-item">
+            <li class="navigation-item uk-active">
               <a href="#activity-departments-submenu" class="navigation-link uk-button" type="button">ДІЯЛЬНІСТЬ</a>
 							<ul class="submenu uk-drop" id="activity-departments-submenu" uk-drop="mode: click">
 								<li class="navigation-item"><a href="scientific-achievements.html" class="navigation-link">Наукові досягнення</a></li>
@@ -93,8 +93,8 @@
         <div class="container">
           <h3 class="uk-text-center">НАУКОВО-ТЕХНІЧНІ РОЗРОБКИ</h3>
           <p>Інститут монокристалів має власний парк ростового і іншого обладнання для  проведення технологічних експериментів з розробки технології вирощування  кристалів і синтезу кераміки, а також випуску експериментальних серій даних  матеріалів.</p>
-          <p>Особливе місце в розробках Інституту займає лейкосапфір. Розроблено технологію вирощування лейкосапфіру методом горизонтальної спрямованої кристалізації (ГСК) в захисному газовому середовищі та технології виготовлення оптичних виробів з них.</p>
-          <p>Особливе місце в розробках Інституту займає лейкосапфір. Розроблено технологію вирощування лейкосапфіру методом горизонтальної спрямованої кристалізації (ГСК) в захисному газовому середовищі та технології виготовлення оптичних виробів з них.</p>
+          <p>Особливе місце в розробках Інституту займає лейкосапфір. Розроблено технологію вирощування лейкосапфіру методом горизонтальної спрямованої кристалізації (ГСК) в захисному газовому середовищі та технології виготовлення оптичних виробів.</p>
+          <p>Вдосконалено ГСК технологію вирощування лазерних кристалів Al<sub>2</sub>O<sub>3</sub>:Ti (Ti:сапфіру), ітрій-алюмінієвого гранату (YAG:Nd, Er, Yb, ін.) та  сцинтиляційних рідкісноземельних гранатів (YAG:Ce, LuAG:Pr, LuAG:Ce).</p>
           <div class="article-card-holder">
             <div class="card-article">
               <div class="card-img">
@@ -133,7 +133,7 @@
                 <img src="images/st-img-5.jpg" alt="Вікно з прозорої броні розміром 490х256х56 мм 3 для БТР-4">
               </div>
               <div class="card-text">
-                <p>Вікно з прозорої броні розміром 490х256х56 мм 3 для БТР-4</p>
+                <p>Вікно з прозорої броні розміром 490х256х56мм<sup>3</sup> для БТР-4</p>
               </div>
             </div>
             <div class="card-article">
@@ -141,7 +141,7 @@
                 <img src="images/st-img-6.jpg" alt="Світлофільтри на сапфірових підкладках">
               </div>
               <div class="card-text"> 
-                <p>Світлофільтри на сапфірових підкладках розміром 152х79х3мм<sub>3</sub> для станцій  захисту «Адрос» літальних апаратів від ракет з інфрачервоними головками самонаведення</p>
+                <p>Світлофільтри на сапфірових підкладках розміром 152х79х3мм<sup>3</sup> для станцій  захисту «Адрос» літальних апаратів від ракет з інфрачервоними головками самонаведення</p>
               </div>
             </div>
             <div class="card-article">
@@ -260,22 +260,23 @@
               </div>
             </div>
           </div>
-          <h4>Кристали групи А ІІ В IV , що вирощено за технологією Бриджмена</h4>
+          <h4>Кристали групи А<sup>ІІ</sup>В<sup>IV</sup>, що вирощено за технологією Бриджмена</h4>
           <ul>
             <li>
-              <h5>Лазерні кристали для середнього інфрачервоного діапазону (1…20 мкм) на основі ZnSe</h5>
-              <div class="card-article">
+              <h5>Лазерні кристали для середнього інфрачервоного діапазону (1…20 мкм)</h5>
+              <div class="card-article uk-text-left">
                 <div class="card-img">
                   <img src="images/st-img-26.jpg" alt="img">
                 </div>
                 <div class="card-text">
-                  <p>Доступні розміри оптичних елементів ZnS, ZnSe: діаметр до 50 мм, товщина від 2 до 20 мм. Проводяться  роботи з підвищення розмірів злитків ZnSe , CdSe та кристали твердих розчинів ZnMgSe, CdMnTe і ін., що леговано іонами перехідних металів (Cr 2+ , Fe 2+ ) є активними середовищами для  твердотільних ІЧ лазерів у спектральному діапазоні  2…6 мкм.</p>
+                  <p>Доступні розміри оптичних елементів ZnS, ZnSe: діаметр до 50 мм, товщина від 2 до 20 мм. Проводяться  роботи з підвищення розмірів злитків.</p>
+                  <p>ZnSe , CdSe та кристали твердих розчинів ZnMgSe, CdMnTe і ін., що леговано іонами перехідних металів (Cr<sup>2+</sup> , Fe<sup>2+</sup> ) є активними середовищами для  твердотільних ІЧ лазерів у спектральному діапазоні  2…6 мкм.</p>
                 </div>
               </div>
             </li>
             <li>
               <h5>Кристали твердих розчинів CdZnTe та CdМnTe</h5>
-              <div class="card-article">
+              <div class="card-article uk-text-left">
                 <div class="card-img">
                   <img src="images/st-img-27.jpg" alt="img">
                 </div>
