--- a/tcfs.html
+++ b/tcfs.html
@@ -47,7 +47,7 @@
 					<ul class="navigation" id="navigation" hidden>
 						<li class="navigation-item"><a href="home.html" class="navigation-link">ГОЛОВНА</a></li>
 						<li class="navigation-item"><a href="events-news.html" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
-						<li class="navigation-item submenu-link">
+						<li class="navigation-item submenu-link uk-active">
 							<a href="#structure-submenu" class="navigation-link uk-button" type="button">СТРУКТУРА</a>
 							<ul class="submenu uk-drop" id="structure-submenu" uk-drop="mode: click">
 								<li class="navigation-item"><a href="leadership.html" class="navigation-link">Керівництво</a></li>
@@ -137,7 +137,7 @@
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd1/cv/CV_Філь_Відділ 1.pdf" class="people-name" target="blanck">Філь Дмитро Вячеславович</a>
-                  <p>провiдний науковий спiвробiтник, доктор фізико-математичних  наук, старший науковий співробітник</p>
+                  <p>Провiдний науковий спiвробiтник, доктор фізико-математичних  наук, старший науковий співробітник</p>
                 </div>
                 <div class="people-contact">
                   <a href="#phil-contact-holder" class="people-contact-link" uk-toggle="target: #phil-contact-holder; animation: uk-animation-fade">Контакти</a>
@@ -157,7 +157,7 @@
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd1/cv/CV_Бродський_Відділ 1.pdf" class="people-name" target="blanck">Бродський Роман Євгенійович</a>
-                  <p>старший науковий співробітник, кандидат фізико-математичних наук</p>
+                  <p>Старший науковий співробітник, кандидат фізико-математичних наук</p>
                 </div>
                 <div class="people-contact">
                   <a href="#brodsky-contact-holder" class="people-contact-link" uk-toggle="target: #brodsky-contact-holder; animation: uk-animation-fade">Контакти</a>
