--- a/cmcc.html
+++ b/cmcc.html
@@ -47,7 +47,7 @@
 					<ul class="navigation" id="navigation" hidden>
 						<li class="navigation-item"><a href="home.html" class="navigation-link">ГОЛОВНА</a></li>
 						<li class="navigation-item"><a href="events-news.html" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
-						<li class="navigation-item submenu-link">
+						<li class="navigation-item submenu-link uk-active">
 							<a href="#structure-submenu" class="navigation-link uk-button" type="button">СТРУКТУРА</a>
 							<ul class="submenu uk-drop" id="structure-submenu" uk-drop="mode: click">
 								<li class="navigation-item"><a href="leadership.html" class="navigation-link">Керівництво</a></li>
@@ -137,8 +137,8 @@
               <div class="card-img"><img src="images/Толмачов.jpg" alt="Толмачов О.В"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <div class="people-name">Толмачов Олександр Володимирович</div>
-                  <p>головний науковий співробітник, член-кореспондент Національної академії наук України, доктор фізико-математичних наук, професор.</p>
+                  <a href="pablick/otd7/cv/CV_Толмачов.pdf" class="people-name" target="blanck">Толмачов Олександр Володимирович</a>
+                  <p>Головний науковий співробітник, член-кореспондент Національної академії наук України, доктор фізико-математичних наук, професор.</p>
                 </div>
                 <div class="people-contact">
                   <a href="#peole-contact-holder-3" class="people-contact-link" uk-toggle="target: #peole-contact-holder-3; animation: uk-animation-fade">Контакти</a>
@@ -159,7 +159,7 @@
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd7/cv/CV_Литвинов_Відділ 7.pdf" class="people-name" target="blanck">Литвинов Леонід Аркадієвич</a>
-                  <p>провiдний науковий спiвробiтник, доктор фізико-математичних  наук, старший науковий співробітник</p>
+                  <p>Провiдний науковий спiвробiтник, доктор фізико-математичних  наук, старший науковий співробітник</p>
                 </div>
                 <div class="people-contact">
                   <a href="#litvinov-contact-holder" class="people-contact-link" uk-toggle="target: #litvinov-contact-holder; animation: uk-animation-fade">Контакти</a>
