--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
 				<nav class="navbar underline">
 					<a href="#navigation" class="dropdown" uk-toggle="target: #navigation; animation: uk-animation-fade"><span class="dropdown-icon"></span></a>
 					<ul class="navigation" id="navigation" hidden>
-						<li class="navigation-item"><a href="home.html" class="navigation-link">ГОЛОВНА</a></li>
+						<li class="navigation-item uk-active"><a href="home.html" class="navigation-link">ГОЛОВНА</a></li>
 						<li class="navigation-item"><a href="events-news.html" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
 						<li class="navigation-item submenu-link">
 							<a href="#structure-submenu" class="navigation-link uk-button" type="button">СТРУКТУРА</a>
@@ -122,7 +122,7 @@
 							<h2 class="card-title">Нелінійно-оптичні кристали</h2>
 							<div class="card-img"><img src="images/card-img-1.png" alt="Нелінійно-оптичні кристали"></div>
 							<p>Розробка та дослідження перспективних нелінійно-
-								оптичних органічних  і неорганічнихмонокристалів 
+								оптичних органічних  і неорганічних монокристалів 
 								для широкосмугової лазерної генерації і перетворення 
 								терагерцового і ІЧ-випромінювання для застосувань 
 								в фотоніці і оптоелектроніці.</p>
