--- a/olc-publications.html
+++ b/olc-publications.html
@@ -47,7 +47,7 @@
             <ul class="navigation" id="navigation" hidden>
               <li class="navigation-item"><a href="home.html" class="navigation-link">ГОЛОВНА</a></li>
               <li class="navigation-item"><a href="events-news.html" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
-              <li class="navigation-item submenu-link">
+              <li class="navigation-item submenu-link uk-active">
                 <a href="#structure-submenu" class="navigation-link uk-button" type="button">СТРУКТУРА</a>
                 <ul class="submenu uk-drop" id="structure-submenu" uk-drop="mode: click">
                   <li class="navigation-item"><a href="leadership.html" class="navigation-link">Керівництво</a></li>
