--- a/home.html
+++ b/home.html
@@ -259,7 +259,7 @@
 					</div>
 				</div>
 			</div>
-			<a href="#" class="link-department underline">Відділ теорії конденсованого стану речовини</a>
+			<a href="tcfs.html" class="link-department underline">Відділ теорії конденсованого стану речовини</a>
 		</div>
 	</div>
 	<div id="lc" class="uk-modal lc-modal technology-modal uk-flex-top" uk-modal>
@@ -307,7 +307,7 @@
 					</div>
 				</div>
 			</div>
-			<a href="#" class="link-department underline">Відділ кристалічних матеріалів складних сполук</a>
+			<a href="cmcc.html" class="link-department underline">Відділ кристалічних матеріалів складних сполук</a>
 		</div>
 	</div>
 	<div id="noc" class="uk-modal noc-modal technology-modal uk-flex-top" uk-modal>
@@ -340,7 +340,7 @@
 					</div>
 				</div>
 			</div>
-			<a href="#" class="link-department underline">Відділ нелінійно-оптичних кристалів</a>
+			<a href="noc.html" class="link-department underline">Відділ нелінійно-оптичних кристалів</a>
 		</div>
 	</div>
 	<div id="olc" class="uk-modal olc-modal technology-modal uk-flex-top" uk-modal>
@@ -373,7 +373,7 @@
 					</div>
 				</div>
 			</div>
-			<a href="#" class="link-department underline">Відділ оптичних і лазерних кристалів</a>
+			<a href="olc.html" class="link-department underline">Відділ оптичних і лазерних кристалів</a>
 		</div>
 	</div>
 		
